Page Restaurant : correction coche verte - problème de overflow ellipsis

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -22,23 +22,18 @@ $loaderweight : 7px;
 
 @keyframes pageloader {
     0% {
-        transform : rotate(0turn);
         opacity : 1;
     }
     20% {
-        transform : rotate(1turn);
         opacity : 1;
     }
     40% {
-        transform: rotate(2turn);
         opacity : 1;
     }
     60% {
-        transform: rotate(3turn);
         opacity : 1;
     }
     80% {
-        transform: rotate(4turn);
         opacity : 1;
     }
     100% {
@@ -46,24 +41,32 @@ $loaderweight : 7px;
     }
 }
 
-@keyframes starter {
-    0%, 90% {
-        opacity : 0;
-    }
-    100% {
-        opacity : 1;
-    }
-}
-
-@keyframes appears {
+@keyframes loader {
     0% {
-        opacity: 0;
-        transform : translateY(20px);
+        transform : rotate(0turn);
+        opacity: 1;
     }
-    100% {
-        opacity : 1;
-        transform : translateY(0px);
+    20% {
+        transform : rotate(1turn);
+        opacity: 1;
     }
+    40% {
+        transform: rotate(2turn);
+        opacity: 1;
+    }
+    60% {
+        transform: rotate(3turn);
+        opacity: 1;
+    }
+    80% {
+        transform: rotate(4turn);
+        opacity: 1;
+    }
+    85% {
+        transform: rotate(-1turn);
+        opacity: 1;
+    }
+    
 }
 
 /*Responsive Tablette*/
@@ -321,10 +324,6 @@ p, a {
     font-size : 0.9em;
 }
 
-header, .localisation, .accueil, .fonctionnement, .restaurants, footer {
-    animation : starter 3500ms ease-in ;
-}
-
 header {
     text-align : center;
     .header__arrow {
@@ -335,27 +334,39 @@ header {
     }
 }
 
-.pageloader {
+/*.pageloader {
     height: 100%;
     width: 100%;
-}
-.loader {
-    width : $loadersize;
-    height : $loadersize;
-    border : $loaderweight solid $color1;
-    border-right : $loaderweight solid $color2;
-    border-bottom: $loaderweight solid $color1;
-    border-left : $loaderweight solid $color3;
-    border-radius : $loadersize;
-    margin: auto;
-    position : absolute;
+    background-color:$backgroundlight;
+    overflow: hidden;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    opacity : 0;
-    animation : pageloader 3000ms linear 200ms;
-}
+    opacity: 0;
+    animation : pageloader 3000ms forwards;
+    &__loader {
+        width : $loadersize;
+        height : $loadersize;
+        border : $loaderweight solid $color1;
+        border-right : $loaderweight solid $color2;
+        border-bottom: $loaderweight solid $color1;
+        border-left : $loaderweight solid $color3;
+        border-radius : $loadersize;
+        margin: auto;
+        position : absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: hidden;
+        opacity: 0;
+        animation: loader 2500ms linear 200ms; 
+    }
+}*/
 
 .localisation {
     background-color: $backgroundregular;
@@ -547,7 +558,17 @@ footer {
 }
 
 
-/* Pages Restaurants*/
+/* --------------------------------------- Pages Restaurants ----------------------------------------------- */
+@keyframes appears {
+    0% {
+        opacity: 0;
+        transform : translateY(20px);
+    }
+    100% {
+        opacity : 1;
+        transform : translateY(0px);
+    }
+}
 
 .pagedesmenus {
     background-color: $backgroundlight;
@@ -607,24 +628,29 @@ footer {
     overflow: hidden;
     opacity: 0;
     &--1 {
-        animation: appears 1800ms ease-in 200ms;
+        animation: appears 800ms ease-in 200ms;
         animation-fill-mode: forwards;
     }
     &--2 {
-        animation: appears 1800ms ease-in 400ms;
+        animation: appears 800ms ease-in 400ms;
         animation-fill-mode: forwards;
     }
     &--3 {
-        animation: appears 1800ms ease-in 600ms;
+        animation: appears 800ms ease-in 600ms;
         animation-fill-mode: forwards;
     }
-        &__bloc {
-            display: flex;
-            justify-content: space-between;
-        }
-        &__detail {
-            padding : 10px;
-        }
+    &__detail {
+        padding : 10px;
+    }
+    &__bloc {
+        display: flex;
+        justify-content: flex-end;
+        overflow: hidden;
+        transform-origin : right;
+        transform : translateX(60%);
+        transition : transform 400ms ease;
+    }
+        
         &__prix {
             align-self : end;
             font-weight : bold;
@@ -635,32 +661,34 @@ footer {
             background-color: $color3;
             text-align: center;
             border-radius : 0px 20px 20px 0px;
-            width : 15%;
-            transform-origin : right;
-            transform : translateX(80px);
-            transition : transform 1000ms ease;
+            width : 60%;
+            
             .fa-check-circle {
                 padding : 20px;
                 margin : auto;
+                vertical-align: middle;
                 font-size: 1.2em;
                 transform: rotate(0deg);
-                transition : transform 1000ms ease;
+                transition : transform 400ms ease;
             }
         }
         &__nom {
             font-weight: bold;
             margin : 0px 0px 5px 0px;
+            overflow: hidden;
             text-overflow: ellipsis;
         }
         &__accompagnement {
             margin : 0px;
             font-size: 0.8em;
             font-weight: 300;
+            overflow: hidden;
             text-overflow: ellipsis;
+            
         }
     &:hover { /*Effet au survol d'un plat*/
         cursor: pointer;
-        & .plat__choice {
+        & .plat__bloc {
             transform : translateX(0px);
         }
         & .fa-check-circle {
@@ -672,4 +700,3 @@ footer {
 .btn--commander {
     margin-bottom : 0px;
 }
-
